--- a/mlab/index.html
+++ b/mlab/index.html
@@ -254,13 +254,13 @@ September 2012 - May 2018  | Humanities Lab + Makerspace</p>
 
 <p>We’ve hosted numerous visiting researchers, including Alexandrine Boudreault-Fournier, Tanja Carstensen, Ed Chang, Tanya Clement, Garnet Hertz, Jesse Colin Jackson, merritt k, Fiona Keenan, Julie Thompson Klein, Doran Larson, Lisa Nakamura, Bethany Nowviskie, Daniela Rosner, and Lynne Siemens, and we’ve funded research across the Arts and Humanities at UVic.</p>
 
-<p>For details about our work, check out <a href="http://maker.uvic.ca/twoyears/">“The Maker Lab after Two Years (2012-14)”</a> and <a href="http://maker.uvic.ca/twoyears2/">“The MLab: A Two-Year Review (2014-16)”</a>, which include month-by-month accounts of our research and service activities, together with plenty of links and images. Also see UVic’s <a href="/fab/">Fab Lab</a>, which we established in collaboration with Visual Arts.</p>
+<p>For details about our work, check out <a href="http://maker.uvic.ca/twoyears/">“The Maker Lab after Two Years (2012-14)”</a> and <a href="http://maker.uvic.ca/twoyears2/">“The MLab: A Two-Year Review (2014-16)”</a>, which include month-by-month accounts of our research and service activities, together with plenty of links and images. Also see UVic’s Fab Lab, which we established in collaboration with Visual Arts.</p>
 
 <p>Our goal is not to attribute prototypes, publications, and other forms of scholarly communication to the MLab as a brand or author. It’s also not to create tools. It’s to prompt students to conduct experimental research they can call their own, on their own terms.</p>
 
 <hr />
 
-<p><em>MLab <a href="/images/posts/mlab.png">logo</a> by Grace Yang. Used with permission. <a href="/images/posts/mlab3.png">Image</a> of the lab’s website care of the MLab. This page was created on 21 June 2019 and last updated on 12 September 2019.</em></p>
+<p><em>MLab <a href="/images/posts/mlab.png">logo</a> by Grace Yang. Used with permission. <a href="/images/posts/mlab3.png">Image</a> of the lab’s website care of the MLab. This page was created on 21 June 2019 and last updated on 11 May 2021.</em></p>
 
           <div class="post__tags">
             
