--- a/mlab/index.html
+++ b/mlab/index.html
@@ -240,7 +240,7 @@
 <p><strong>Maker Lab in the Humanities (MLab)</strong>  <br />
 September 2012 - May 2018  | Humanities Lab + Makerspace</p>
 
-<p>Resources: <a href="http://web.archive.org/web/20210502085759/https://maker.uvic.ca/">lab website</a> (WordPress), two-year reviews in <a href="http://web.archive.org/web/20201020113352/http://maker.uvic.ca/twoyears/">2012-14</a> and <a href="http://web.archive.org/web/20201020122903/http://maker.uvic.ca/twoyears2/">2014-16</a> (WordPress), <a href="http://web.archive.org/web/20210124194545/http://maker.uvic.ca/kch/">Kits for Cultural History</a> (WordPress), <a href="http://web.archive.org/web/20201020124308/http://maker.uvic.ca/makerspace/">The Humanities Lab as a Makerspace</a> (WordPress), <a href="/archive/lab/mLabInfrastructure.csv">makerspace and fab lab inventory</a> (CSV), <a href="/archive/lab/MLabPosts.xml">archived posts</a> (XML), <a href="/archive/lab/MLabPages.xml">archived pages</a> (XML), <a href="/archive/lab/mLabImages.zip">archived images</a> (ZIP), <a href="/archive/lab/mLabVideo.zip">archived video</a> (ZIP), <a href="/archive/lab/mLabLogoFull.png">logo</a> (PNG), and <a href="/archive/talks/bclibrary/">talk</a> (HTML) at BCLA about the lab’s infrastructure</p>
+<p><strong>Links</strong>: <a href="http://web.archive.org/web/20210502085759/https://maker.uvic.ca/">lab website</a> (WordPress), two-year reviews in <a href="http://web.archive.org/web/20201020113352/http://maker.uvic.ca/twoyears/">2012-14</a> and <a href="http://web.archive.org/web/20201020122903/http://maker.uvic.ca/twoyears2/">2014-16</a> (WordPress), <a href="http://web.archive.org/web/20210124194545/http://maker.uvic.ca/kch/">Kits for Cultural History</a> (WordPress), <a href="http://web.archive.org/web/20201020124308/http://maker.uvic.ca/makerspace/">The Humanities Lab as a Makerspace</a> (WordPress), <a href="/archive/lab/mLabInfrastructure.csv">makerspace and fab lab inventory</a> (CSV), <a href="/archive/lab/MLabPosts.xml">archived posts</a> (XML), <a href="/archive/lab/MLabPages.xml">archived pages</a> (XML), <a href="/archive/lab/mLabImages.zip">archived images</a> (ZIP), <a href="/archive/lab/mLabVideo.zip">archived video</a> (ZIP), <a href="/archive/lab/mLabLogoFull.png">logo</a> (PNG), and <a href="/archive/talks/bclibrary/">talk</a> (HTML) at BCLA about the lab’s infrastructure</p>
 
 <p>Supported by the Canada Foundation for Innovation, Social Sciences and Humanities Research Council of Canada, British Columbia Knowledge Development Fund, Modernist Versions Project, and UVic’s Faculty of Humanities, Faculty of Fine Arts, Department of English, and Department of Visual Arts</p>
 
@@ -260,7 +260,7 @@ September 2012 - May 2018  | Humanities Lab + Makerspace</p>
 
 <hr />
 
-<p><em>MLab <a href="/images/posts/mlab.png">logo</a> by Grace Yang. Used with permission. <a href="/images/posts/mlab3.png">Image</a> of the lab’s website care of the MLab. This page was created on 21 June 2019 and last updated on 11 May 2021.</em></p>
+<p><em>MLab <a href="/images/posts/mlab.png">logo</a> by Grace Yang. Used with permission. <a href="/images/posts/mlab3.png">Image</a> of the lab’s website care of the MLab. This page was created on 21 June 2019 and last updated on 19 May 2021.</em></p>
 
           <div class="post__tags">
             
