--- a/nofuture/index.html
+++ b/nofuture/index.html
@@ -215,7 +215,7 @@
 
 <p>What’s meant by “design without a future”? With a nod to Roland Barthes’s <em>Camera Lucida</em>, the phrase positions prototyping not as a speculation about possible futures but rather as a negotiation with media history. It also stresses the fact that many early technologies are no longer accessible: they are not in circulation, or they’re broken, or they don’t work (as intended) anymore. Remaking them is thus about attending to contingencies, not recovering ideal builds or designs.</p>
 
-<p>Below are links to the essay (subscription required), a related talk (about early magnetic recording) I gave at the University of Hawai’i at Mānoa, a conversation I had about media history and prototyping on KHPR 88.1 FM Hawai’i public radio, and a page detailing the MLab’s research on the topic. With permission, I’ve also compressed all of Danielle Morgan’s photographs for the article, and I’ve included the <em>ACM Interactions</em> sample of the essay.</p>
+<p>Below are links to the essay (subscription required), a related talk (about early magnetic recording) I gave at the University of Hawaiʻi at Mānoa, a conversation I had about media history and prototyping on KHPR 88.1 FM Hawaiʻi public radio, and a page detailing the MLab’s research on the topic. With permission, I’ve also compressed all of Danielle Morgan’s photographs for the article, and I’ve included the <em>ACM Interactions</em> sample of the essay.</p>
 
 <hr />
 
@@ -224,7 +224,7 @@
 <p><strong>Design without a Future</strong>   <br />
 Published in <a href="https://interactions.acm.org/archive/view/november-december-2016/design-without-a-future"><em>ACM Interactions</em></a> (Rosner, ed.) in November-December 2016 | three pages, with photographs by Danielle Morgan | subscription required</p>
 
-<p><strong>Links</strong>: <a href="https://interactions.acm.org/archive/view/november-december-2016/design-without-a-future">article</a> (HTML); <a href="/archive/essays/designWithoutAFuture2016.zip">photographs</a> (ZIP; by Danielle Morgan); <a href="http://maker.uvic.ca/emrkit/">MLab research</a> (HTML) on early magnetic recording; <a href="/blog.html#early-magnetic-recording">talk</a> (HTML) at U. of Hawai’i at Mānoa with <a href="/archive/talks/hawaii/magRecordingTalk/">slides</a> (HTML); <a href="/archive/talks/hawaii/bytemarksCafeHawaiiPublicRadioApril2016.mp3">conversation</a> (MP3) on KHPR 88.1 FM Hawai’i public radio</p>
+<p><strong>Links</strong>: <a href="https://interactions.acm.org/archive/view/november-december-2016/design-without-a-future">article</a> (HTML); <a href="/archive/essays/designWithoutAFuture2016.zip">photographs</a> (ZIP; by Danielle Morgan); <a href="http://maker.uvic.ca/emrkit/">MLab research</a> (HTML) on early magnetic recording; <a href="/blog.html#early-magnetic-recording">talk</a> (HTML) at U. of Hawaiʻi at Mānoa with <a href="/archive/talks/hawaii/magRecordingTalk/">slides</a> (HTML); <a href="/archive/talks/hawaii/bytemarksCafeHawaiiPublicRadioApril2016.mp3">conversation</a> (MP3) on KHPR 88.1 FM Hawaiʻi public radio</p>
 
 <hr />
 
@@ -238,7 +238,7 @@ Published in <a href="https://interactions.acm.org/archive/view/november-decembe
 
 <hr />
 
-<p><em>Featured <a href="/images/posts/nofuture.png">image</a> care of Danielle Morgan. Used with permission. Bottom <a href="/images/posts/nofuture3.png">image</a> also care of Danielle Morgan, with permission. Middle <a href="/images/posts/nofuture2.png">image</a> is a photograph of</em> Interactions <em>(Nov-Dec 2016). This page was created on 11 July 2019 and last updated on 14 June 2021.</em></p>
+<p><em>Featured <a href="/images/posts/nofuture.png">image</a> care of Danielle Morgan. Used with permission. Bottom <a href="/images/posts/nofuture3.png">image</a> also care of Danielle Morgan, with permission. Middle <a href="/images/posts/nofuture2.png">image</a> is a photograph of</em> Interactions <em>(Nov-Dec 2016). This page was created on 11 July 2019 and last updated on 18 June 2021.</em></p>
 
           <div class="post__tags">
             
