--- a/blog.html
+++ b/blog.html
@@ -331,16 +331,6 @@ Lorem ipsum dolor sit amet, an sed modo veri epicuri, tamquam recusabo mnesarchu
 
 <!-- ***
 
-# [Executable Culture](#executable-culture)
-
-*10 April 2015* 
-
-archive/talks/waterloo - also draft material for ctheory? 
-
-Lorem ipsum dolor sit amet, an sed modo veri epicuri, tamquam recusabo mnesarchum ea ius. Mei no utamur saperet delicatissimi, ea modo partem vidisse est, sed nullam feugiat salutandi eu. Eu mel everti copiosae. In pri mundi docendi praesent. Vis idque indoctum id, vel malorum habemus ei, id quo wisi gloriatur. Ei eos quot tation. Aeterno concludaturque quo id. Assum eripuit admodum ne per, at zril libris mel, possim mollis persius ea pro. Mandamus hendrerit sea no, choro postulant salutatus vix eu. 
-
-***
-
 # [Materialities in the Material Turn](#materialities-in-the-material-turn)
 
 *13 February 2015* 
@@ -367,6 +357,22 @@ Lorem ipsum dolor sit amet, an sed modo veri epicuri, tamquam recusabo mnesarchu
 
 <hr />
 
+<h1 id="from-2d-to-3d"><a href="#from-2D-to-3D">From 2D to 3D</a></h1>
+
+<p><em>22 July 2013</em></p>
+
+<p>The annual Digital Humanities conference was at the University of Nebraska-Lincoln this summer. Jeremy Boggs, Devon Elliot, and I conducted a <a href="http://dh2013.unl.edu/abstracts/workshops-009.html">workshop</a> (HTML; <a href="http://dh2013.unl.edu/abstracts/workshops-009.xml">XML</a>) on desktop fabrication and then gave a <a href="http://dh2013.unl.edu/abstracts/ab-441.html">talk</a> (HTML; <a href="http://dh2013.unl.edu/abstracts/ab-441.xml">XML</a>) on the same topic, both around the theme of moving from 2D to 3D in humanities research. We published our <a href="/archive/talks/dh2013/madetomake/">slides</a> (HTML), and our <a href="/archive/talks/dh2013/">notes</a> (HTML) contain what we hope will be a useful bibliography for anyone with interests in fabrication, physical computing, and the humanities.</p>
+
+<hr />
+
+<h1 id="executable-culture"><a href="#executable-culture">Executable Culture</a></h1>
+
+<p><em>12 April 2015</em></p>
+
+<p>I was fortunate to give the keynote at Waterloo’s Experimental Digital Media (XDM) annual exhibition and symposium, the theme for which was <a href="/archive/talks/waterloo/waterloo.jpg">“Feedback, Fedback, Feedforward”</a> (JPG). The title of my talk was <a href="archive/talks/waterloo/">“Executable Culture, Arguments with Objects”</a> (HTML), and after it I spoke with Adam Cilevitz, Paisley Cozzarin, Shawn DeSouza-Coelho, Rob Parker, Sophia Pelka, Matthew Schwager, and Stephen Trothen about their fantastic XDM work. Thanks a bunch to Beth Coleman, Marcel O’Gorman, and everyone at the <a href="http://criticalmedia.uwaterloo.ca/crimelab/">Critical Media Lab</a> for inviting and hosting me.</p>
+
+<hr />
+
 <h1 id="dropping-the-digital"><a href="#dropping-the-digital">Dropping the Digital</a></h1>
 
 <p><em>10 April 2012</em></p>
@@ -375,8 +381,7 @@ Lorem ipsum dolor sit amet, an sed modo veri epicuri, tamquam recusabo mnesarchu
 
 <hr />
 
-<p><em><a href="/images/pages/notes.png">Sketch</a> by Beckett. Used with permission. Content on this page dates back to 15 June 2011. The page was last updated on 18 June 2021.</em></p>
-
+<p><em><a href="/images/pages/notes.png">Sketch</a> by Beckett. Used with permission. Content on this page dates back to 15 June 2011. The page was last updated on 21 June 2021.</em></p>
 
         </div>
       </article>
