--- a/researchcreation/index.html
+++ b/researchcreation/index.html
@@ -220,7 +220,7 @@
 <p><img src="/images/posts/fab4.png" alt="Photograph of a box laser-engraved with the signature, L. Bienfait." /></p>
 
 <p><strong>Fabrication and Research-Creation in the Arts and Humanities</strong>   <br />
-Published in <a href="https://www.routledge.com/Doing-Digital-Humanities-Practice-Training-Research/Crompton-Lane-Siemens/p/book/9781138899445"><em>Doing Digital Humanities</em></a> (Crompton et al., eds.) in 2016 | fourteen pages, including three figures</p>
+Published in <a href="https://www.routledge.com/Doing-Digital-Humanities-Practice-Training-Research/Crompton-Lane-Siemens/p/book/9781138899445"><em>Doing Digital Humanities</em></a> (Crompton et al., eds.) in 2016 | Routledge | fourteen pages, including three figures</p>
 
 <p><strong>Links</strong>: <a href="https://www.routledge.com/Doing-Digital-Humanities-Practice-Training-Research/Crompton-Lane-Siemens/p/book/9781138899445">publisher’s page</a> (HTML); <a href="https://www.nicoleclouston.com/">nicoleclouston.com</a> (HTML); <a href="https://maker.uvic.ca/fab/">MLab project page</a> (HTML); <a href="/physcompfab">course</a> (HTML); <a href="https://maker.uvic.ca/scan/">environmental scan</a> (HTML with <a href="/archive/lab/fabSurveyByUVicMakerLab.xlsx">XLSX</a>) of digital fabrication labs; <a href="/blog.html#how-to-lie-with-computer-vision">talk</a> (HTML) at Kansas with <a href="/archive/talks/kansas/keynote/">slides</a> (HTML)</p>
 
@@ -230,7 +230,7 @@ Published in <a href="https://www.routledge.com/Doing-Digital-Humanities-Practic
 
 <hr />
 
-<p><em><a href="/images/posts/fab4.png">Image</a> from the Early Wearables project care of Danielle Morgan and the MLab. Other <a href="/images/posts/fab.png">image</a>, of wood stacked in UVic’s Digital Fabrication Lab, care of the MLab. Both used with permission. This page was created on 20 August 2019 and last updated on 14 June 2021.</em></p>
+<p><em><a href="/images/posts/fab4.png">Image</a> from the Early Wearables project care of Danielle Morgan and the MLab. Other <a href="/images/posts/fab.png">image</a>, of wood stacked in UVic’s Digital Fabrication Lab, care of the MLab. Both used with permission. This page was created on 20 August 2019 and last updated on 21 June 2021.</em></p>
 
           <div class="post__tags">
             
