--- a/blog.html
+++ b/blog.html
@@ -275,7 +275,7 @@ Vis idque indoctum id, vel malorum habemus ei, id quo wisi gloriatur. Ei eos quo
 
 <p><em>25 March 2018</em></p>
 
-<p>Since early 2017, I’ve been developing approaches to literay and media studies that experiment with not only Daniela Rosner’s notion of “design as inquiry” and Kari Kraus’s “family of subjunctive practices” but also what Les Back and Nirmal Puwar call “live methods.” I shared some early material at the American Institute of Graphic Arts (AIGA) meeting at USC back in June and, more recently, during a discussion with Florida State University’s Digital Scholars group. Here are my slides for those two talks: <a href="/archive/talks/aiga/">AIGA</a> (HTML) and <a href="/archive/talks/fsu/">FSU</a> (HTML). Thanks to Tarez Graban for inviting me to speak with folks at FSU, to graduate students at FSU for <a href="https://digitalscholars.wordpress.com/?s=jentery&amp;submit=Search">responding publicly</a> (HTML) to my talk, and to Kate Sweetapple and Jacquie Lorber-Kasunic for presenting with me at AIGA.</p>
+<p>Since early 2017, I’ve been developing approaches to literary and media studies that experiment with not only Daniela Rosner’s notion of “design as inquiry” and Kari Kraus’s “family of subjunctive practices” but also what Les Back and Nirmal Puwar call “live methods.” I shared some early material at the American Institute of Graphic Arts (AIGA) meeting at USC back in June and, more recently, during a discussion with Florida State University’s Digital Scholars group. Here are my slides for those two talks: <a href="/archive/talks/aiga/">AIGA</a> (HTML) and <a href="/archive/talks/fsu/">FSU</a> (HTML). Thanks to Tarez Graban for inviting me to speak with folks at FSU, to graduate students at FSU for <a href="https://digitalscholars.wordpress.com/?s=jentery&amp;submit=Search">responding publicly</a> (HTML) to my talk, and to Kate Sweetapple and Jacquie Lorber-Kasunic for presenting with me at AIGA.</p>
 
 <!-- *** 
 
@@ -323,11 +323,43 @@ Lorem ipsum dolor sit amet, an sed modo veri epicuri, tamquam recusabo mnesarchu
 
 <hr />
 
+<h1 id="between-english-and-visual-arts"><a href="#between-English-and-Visual-Arts">Between English and Visual Arts</a></h1>
+
+<p><em>29 June 2015</em></p>
+
+<p>The British Columbia Library Association held its <a href="https://bclaconnect.ca/2015-conference/?page_id=341">2015 conference</a> (HTML) in May, and I had the privilege of giving a talk on the design, development, and maintenance of UVic’s Digital Fabrication Lab. The title of my talk was <a href="/archive/talks/bclibrary/">“Between English and Visual Arts”</a> (HTML), and I wrote a related MLab piece on the <a href="https://maker.uvic.ca/bclib15/">infrastructural disposition</a> (HTML) of lab work across the humanities and fine arts. Thanks to Anne Olsen and Erin Fields for the invitation, and to Springer for sponsoring the session.</p>
+
+<hr />
+
+<h1 id="prototyping-as-inquiry"><a href="#prototyping-as-inquiry">Prototyping as Inquiry</a></h1>
+
+<p><em>8 June 2015</em></p>
+
+<p>Union College in Schenectady hosted the eighth symposium on <a href="https://muse.union.edu/ele-symposium/">Engineering and Liberal Education</a> on June 5th and 6th. I had the honor of giving a plenary at the event on the topic of <a href="/archive/talks/union">prototyping as inquiry</a> (HTML), and Hod Lipson gave the keynote. Many thanks to Christine Henseler for inviting me to Union’s scenic campus. I enjoyed speaking with faculty, staff, and students there and at Rensselaer Polytechnic Institute about prototyping in liberal education. I also had a chance to spend a few days in the Adirondacks, on Lake Saranac, while visiting.</p>
+
+<hr />
+
 <h1 id="the-pedagogy-of-prototyping"><a href="#the-pedagogy-of-prototyping">The Pedagogy of Prototyping</a></h1>
 
 <p><em>25 April 2015</em></p>
 
 <p>Thanks to Michael Widner and Amir Eshel for inviting me to speak at <a href="https://dlcl.stanford.edu/events/prototyping-and-pedagogy-humanities">Stanford</a> (HTML) to the Division of Literatures, Cultures, and Languages’ Digital Humanities Focal Group. The title of my talk was <a href="/archive/talks/stanford/">“Prototyping and Pedagogy in the Humanities,”</a> (HTML) and it featured an array of undergraduate and graduate research here at UVic, with some remarks about digital studies courses I’ve designed and taught since 2009.</p>
+
+<hr />
+
+<h1 id="executable-culture"><a href="#executable-culture">Executable Culture</a></h1>
+
+<p><em>12 April 2015</em></p>
+
+<p>I was fortunate to give the keynote at Waterloo’s Experimental Digital Media (XDM) annual exhibition and symposium, the theme for which was <a href="/archive/talks/waterloo/waterloo.jpg">“Feedback, Fedback, Feedforward”</a> (JPG). The title of my talk was <a href="archive/talks/waterloo/">“Executable Culture, Arguments with Objects”</a> (HTML), and after it I spoke with Adam Cilevitz, Paisley Cozzarin, Shawn DeSouza-Coelho, Rob Parker, Sophia Pelka, Matthew Schwager, and Stephen Trothen about their fantastic XDM work. Thanks a bunch to Beth Coleman, Marcel O’Gorman, and everyone at the <a href="http://criticalmedia.uwaterloo.ca/crimelab/">Critical Media Lab</a> for inviting and hosting me.</p>
+
+<hr />
+
+<h1 id="human-machine-vision"><a href="#human-machine-vision">Human-Machine Vision</a></h1>
+
+<p><em>15 March 2015</em></p>
+
+<p>Last week, I had the privilege of being a guest instructor at the University of Minnesota, as part of their annual <a href="/catalyst">“Architecture as Catalyst”</a> series. This year’s theme was “Façade,” and I was joined by several other guest instructors: Leah Beuchley, Doris Kim Sung, Hideyuki Nakayama, Omar Gandhi, and Ian Harris. Each of us also gave a talk while we were there, and the College of Design recorded them all and made a <a href="https://www.youtube.com/playlist?list=PLvEWoWCaNBWzzkh8JH67okdlZZAlda1zC">playlist</a> (YouTube). The title of my talk was “Human-Machine Vision: A Post-Cinematic Approach.” It surveyed the various roles computer vision plays in arts and humanities research, including some work done in the <a href="/mlab">MLab</a>. Many thanks to Andrea Johnson for not only inviting me to Minnesota but also teaching a Catalyst course with me.</p>
 
 <!-- ***
 
@@ -365,14 +397,6 @@ Lorem ipsum dolor sit amet, an sed modo veri epicuri, tamquam recusabo mnesarchu
 
 <hr />
 
-<h1 id="executable-culture"><a href="#executable-culture">Executable Culture</a></h1>
-
-<p><em>12 April 2015</em></p>
-
-<p>I was fortunate to give the keynote at Waterloo’s Experimental Digital Media (XDM) annual exhibition and symposium, the theme for which was <a href="/archive/talks/waterloo/waterloo.jpg">“Feedback, Fedback, Feedforward”</a> (JPG). The title of my talk was <a href="archive/talks/waterloo/">“Executable Culture, Arguments with Objects”</a> (HTML), and after it I spoke with Adam Cilevitz, Paisley Cozzarin, Shawn DeSouza-Coelho, Rob Parker, Sophia Pelka, Matthew Schwager, and Stephen Trothen about their fantastic XDM work. Thanks a bunch to Beth Coleman, Marcel O’Gorman, and everyone at the <a href="http://criticalmedia.uwaterloo.ca/crimelab/">Critical Media Lab</a> for inviting and hosting me.</p>
-
-<hr />
-
 <h1 id="dropping-the-digital"><a href="#dropping-the-digital">Dropping the Digital</a></h1>
 
 <p><em>10 April 2012</em></p>
@@ -381,7 +405,7 @@ Lorem ipsum dolor sit amet, an sed modo veri epicuri, tamquam recusabo mnesarchu
 
 <hr />
 
-<p><em><a href="/images/pages/notes.png">Sketch</a> by Beckett. Used with permission. Content on this page dates back to 15 June 2011. The page was last updated on 21 June 2021.</em></p>
+<p><em><a href="/images/pages/notes.png">Sketch</a> by Beckett. Used with permission. Content on this page dates back to 15 June 2011. The page was last updated on 5 July 2021.</em></p>
 
         </div>
       </article>
