--- a/mlab/index.html
+++ b/mlab/index.html
@@ -236,9 +236,9 @@
 <p><img src="../images/posts/mlab3.png" alt="Screengrab of the home page for the Maker Lab in the Humanities" /></p>
 
 <p><strong>Maker Lab in the Humanities (MLab)</strong>  <br />
-September 2012 - May 2018  | Humanities Lab + Makerspace</p>
+September 2012 - May 2018  | Humanities Lab + Makerspace | UVic’s Technology Enterprise Facility</p>
 
-<p><strong>Links</strong>: <a href="https://maker.uvic.ca/">lab website</a> (HTML); two-year reviews in <a href="http://maker.uvic.ca/twoyears/">2012-14</a> (HTML) and <a href="http://maker.uvic.ca/twoyears2/">2014-16</a> (HTML); <a href="http://maker.uvic.ca/kch/">Kits for Cultural History</a> (HTML); <a href="http://maker.uvic.ca/makerspace/">The Humanities Lab as a Makerspace</a> (HTML); <a href="/archive/lab/mLabInfrastructure.csv">makerspace and fab lab inventory</a> (CSV); <a href="/archive/lab/mLabPosts.xml">archived posts</a> (XML); <a href="/archive/lab/mLabPages.xml">archived pages</a> (XML); <a href="/archive/lab/mLabImages.zip">archived images</a> (ZIP); <a href="/archive/lab/mLabVideo.zip">archived video</a> (ZIP); <a href="/archive/lab/mLabLogoFull.png">lab logo</a> (PNG); <a href="/archive/talks/bclibrary/">talk</a> (HTML) at BC Library Conference about the lab’s infrastructure</p>
+<p><strong>Links</strong>: <a href="https://maker.uvic.ca/">lab website</a> (HTML); two-year reviews in <a href="http://maker.uvic.ca/twoyears/">2012-14</a> (HTML) and <a href="http://maker.uvic.ca/twoyears2/">2014-16</a> (HTML); <a href="http://maker.uvic.ca/kch/">Kits for Cultural History</a> (HTML); <a href="http://maker.uvic.ca/makerspace/">The Humanities Lab as a Makerspace</a> (HTML); <a href="/archive/lab/mLabInfrastructure.csv">makerspace and fab lab inventory</a> (CSV); <a href="/archive/lab/mLabPosts.xml">archived posts</a> (XML); <a href="/archive/lab/mLabPages.xml">archived pages</a> (XML); <a href="/archive/lab/mLabImages.zip">archived images</a> (ZIP); <a href="/archive/lab/mLabVideo.zip">archived video</a> (ZIP); <a href="/archive/lab/mLabLogoFull.png">lab logo</a> (PNG); <a href="/blog.html#between-english-and-visual-arts">talk</a> (HTML) with <a href="/archive/talks/bclibrary/">slides</a> (HTML) at the BC Library Conference</p>
 
 <p>Supported by the Canada Foundation for Innovation, Social Sciences and Humanities Research Council of Canada, British Columbia Knowledge Development Fund, Modernist Versions Project, and UVic’s Faculty of Humanities, Faculty of Fine Arts, Department of English, and Department of Visual Arts</p>
 
@@ -258,7 +258,7 @@ September 2012 - May 2018  | Humanities Lab + Makerspace</p>
 
 <hr />
 
-<p><em>MLab <a href="/images/posts/mlab.png">logo</a> by Grace Yang. Used with permission. <a href="/images/posts/mlab3.png">Image</a> of the lab’s website care of the MLab. This page was created on 21 June 2019 and last updated on 20 May 2021.</em></p>
+<p><em>MLab <a href="/images/posts/mlab.png">logo</a> by Grace Yang. Used with permission. <a href="/images/posts/mlab3.png">Image</a> of the lab’s website care of the MLab. This page was created on 21 June 2019 and last updated on 5 July 2021.</em></p>
 
           <div class="post__tags">
             
