--- a/blog.html
+++ b/blog.html
@@ -738,7 +738,7 @@ Lorem ipsum dolor sit amet, an sed modo veri epicuri, tamquam recusabo mnesarchu
 
 <hr />
 
-<p><em><a href="/images/pages/notes.png">Sketch</a> by Beckett. Used with permission. Content on this page, some of which was originally written in WordPress or GitHub, dates back to 1 July 2011. The page was last updated on 26 January 2022.</em></p>
+<p><em><a href="/images/pages/notes.png">Sketch</a> by Beckett. Used with permission. Content on this page, some of which was originally written in WordPress or GitHub, dates back to 1 July 2011. I last updated the page on 30 January 2022.</em></p>
 
         </div>
       </article>
