--- a/comics/index.html
+++ b/comics/index.html
@@ -305,7 +305,7 @@ Here’s a list of the comics we’ll read this term. They’re available at the
 
 <hr />
 
-<p><em>The featured <a href="/images/posts/comics.png">image</a> is a panel care of Molly Butler. The main <a href="/images/posts/comics2.png">image</a> is an annotation of</em> Ms. Marvel <em>care of Fiona Thompson. Both images used with written permission. This page was created on 25 January 2022 and last updated on 27 January 2022.</em></p>
+<p><em>The featured <a href="/images/posts/comics.png">image</a> is a panel care of Molly Butler. The main <a href="/images/posts/comics2.png">image</a> is an annotation of</em> Ms. Marvel <em>care of Fiona Thompson. Both images used with written permission. I created this page on 25 January 2022 and last updated it on 30 January 2022.</em></p>
 
           <div class="post__tags">
             
