--- a/currently/index.html
+++ b/currently/index.html
@@ -237,7 +237,7 @@
 
 <hr />
 
-<p><em>Featured <a href="/images/posts/currently.png">image</a> by Danielle Morgan. Used and modified with permission. This page was created on 11 May 2021 and last updated on 27 January 2022.</em></p>
+<p><em>Featured <a href="/images/posts/currently.png">image</a> by Danielle Morgan. Used and modified with permission. I created this page on 11 May 2021 and last updated it on 30 January 2022.</em></p>
 
           <div class="post__tags">
             
