--- a/about.html
+++ b/about.html
@@ -247,7 +247,7 @@ Victoria, BC V8W 2Y2</p>
 
 <hr />
 
-<p><em><a href="images/pages/about.png">Illustration</a> of me by Danielle Morgan. Used with permission. This page was created on 4 May 2021 and last updated on 27 January 2022.</em></p>
+<p><em><a href="images/pages/about.png">Illustration</a> of me by Danielle Morgan. Used with permission. I created this page on 4 May 2021 and last updated it on 30 January 2022.</em></p>
 
         </div>
       </article>
