--- a/blog.html
+++ b/blog.html
@@ -419,7 +419,9 @@
 
 <h1 id="minnesota-published-my-first-book"><a href="#minnesota-published-my-first-book">Minnesota Published My First Book</a></h1>
 
-<p>It’s here! My <a href="/images/pages/minnesotaBook.jpg">first book</a>! It’s an edited collection called, <a href="/mtdb"><em>Making Things and Drawing Boundaries</em></a>. Thanks to everyone at the University of Minnesota Press, especially Danielle M. Kasprzak; the <em>Debates in DH</em> team, including Lauren Klein and Matt Gold; and every author who contributed a chapter. I truly enjoyed working on this project, and it’s wonderful to see it in the world for people to read.</p>
+<p><em>11 January 2018</em></p>
+
+<p>It’s here! My <a href="/images/pages/minnesotaBook.jpg">first book</a>! It’s an edited collection called, <a href="/mtdb"><em>Making Things and Drawing Boundaries</em></a>. Thanks to everyone at the University of Minnesota Press, especially Dani Kasprzak; the <em>Debates in DH</em> team, including Lauren Klein and Matt Gold; and every author who contributed a chapter. I truly enjoyed working on this project, and it’s wonderful to see it in the world for people to read.</p>
 
 <hr />
 
@@ -779,7 +781,7 @@ Lorem ipsum dolor sit amet, an sed modo veri epicuri, tamquam recusabo mnesarchu
 
 <hr />
 
-<p><em><a href="/images/pages/notes.png">Sketch</a> by Beckett. Used with permission. Content on this page, some of which was originally written in WordPress or GitHub, dates back to 1 July 2011. I last updated the page on 15 April 2022.</em></p>
+<p><em><a href="/images/pages/notes.png">Sketch</a> by Beckett. Used with permission. Content on this page, some of which was originally written in WordPress or GitHub, dates back to 1 July 2011. I last updated this page on 15 April 2022.</em></p>
 
         </div>
       </article>
