--- a/recentwork/index.html
+++ b/recentwork/index.html
@@ -232,7 +232,15 @@
 
 <hr />
 
-<p><strong>“Professor Bot: An Exercise in Algorithmic Accountability”</strong> (forthcoming): an assignment and summary I wrote for Annette Vee, Tim Laquintano, and Carly Schnitzler’s <a href="https://wac.colostate.edu/repository/collections/cfp-textgened/"><em>Teaching with Text Generation Technologies</em></a></p>
+<p><strong>“Exploring AI Pedagogy: A Community Collection of Teaching Reflections”</strong> (2023): an initiative of the <a href="https://exploringaipedagogy.hcommons.org/">MLA-CCCC Joint Task Force on AI and Writing</a> to which I contributed</p>
+
+<p>“As AI evolves, educators are experimenting with ways to teach about it and use it in the classroom. This crowdsourced space allows for timely reflections on our experiments in a spirit of open, collaborative inquiry.</p>
+
+<p>Have you tried something in your classroom related to AI that excited or disappointed you? Is there a classroom activity that has made you hopeful about the future of AI in higher ed? Maybe you tried out a pedagogical practice that you heard about from a colleague and have some reflections to offer? On this site, you can share your pedagogical experiences with colleagues and reflect on successes, failures, and results that leave us perplexed” (care of the Initiative’s “about” page).</p>
+
+<hr />
+
+<p><strong>“Professor Bot: An Exercise in Algorithmic Accountability”</strong> (2023): an assignment and summary I wrote for Annette Vee, Tim Laquintano, and Carly Schnitzler’s <a href="https://wac.colostate.edu/repository/collections/textgened/"><em>Teaching with Text Generation Technologies</em></a></p>
 
 <p>This low-tech, tool-agnostic, small-stakes assignment prompts students to attend to issues of power and governance at play in artificial intelligence (AI), with an emphasis on what students do not know and may thus want to learn about algorithmic decision-making. Students first consider a hypothetical scenario where AI is assessing university entrance essays. They then consult publications on algorithmic accountability to articulate questions they would want to ask key decision-makers about the AI decision-making process. They conclude the exercise by reflecting on what they learned about algorithmic accountability, transparency, and social responsibility.</p>
 
@@ -244,7 +252,7 @@
 
 <hr />
 
-<p><strong>Web Design</strong> (2023): a <a href="https://jentery.github.io/401/">course</a> for 23 students I’m teaching in UVic’s Professional Communication program</p>
+<p><strong>Web Design</strong> (2023): a <a href="https://jentery.github.io/401/">course</a> for 23 students I taught in UVic’s Professional Communication program</p>
 
 <p>In this course, I will teach you how to produce accessible websites in HTML and CSS without the need for databases or content management systems. You’ll learn a basic vocabulary for web design alongside many techniques involved in publishing your own content. You’ll work on a series of exercises and projects that will develop your knowledge as a writer and web designer, and ultimately you’ll create two simple websites. Roughly 60% of the course material will be grounded in style (CSS), encoding (HTML), and publishing, with the other 40% dedicated to composing compelling content you want to see in the world. Throughout the course, we’ll combine an awareness of values in design with attention to the technical particulars of web development.</p>
 
@@ -300,7 +308,7 @@
 
 <hr />
 
-<p><em>Featured <a href="/images/posts/recentwork.png">image</a> (PNG), edited in Photoshop, features cables in my drawer. I created this page on 7 August 2023.</em></p>
+<p><em>Featured <a href="/images/posts/recentwork.png">image</a> (PNG), edited in Photoshop, features cables in my drawer. I created this page on 7 August 2023 and last updated it on 7 January 2024.</em></p>
 
           <div class="post__tags">
             
